# rfi_router

./: .gitignore  PROJECT_HANDOVER.md  README.md  monoboard_agent_constitution.md  monoboard_deployment_runbook.md  monoboard_drift_decisions.md  monoboard_kill_switch_runbook.md  monoboard_matrix_schema_drift.md  monoboard_phase0_build_spec.md  package-lock.json  package.json  validate.js
.github/workflows/: agents-ci-cd.yml  azure-static-web-apps-mango-grass-0e208d110.yml  dashboard-ci-cd.yml  deploy.yml  validator-ci-cd.yml
A-Governance-Agent/: README.md  index.js  package-lock.json  package.json
agents/approvals/: function_app.py  host.json  pyproject.toml
agents/approvals/src/: approval_orchestrator.py  models.py  queue_trigger.py
agents/bid_assist/: function_app.py  main.py  pyproject.toml  requirements.txt
agents/bid_assist/src/: agent.py  validator_client.py
agents/bid_assist/tests/: test_agent.py
agents/ceo_agent/: function_app.py  main.py  pyproject.toml
agents/change_order/: function_app.py  pyproject.toml
agents/daily_report/: function_app.py  pyproject.toml
agents/rfi_router/: main.py  (+2 more)
apps/: .gitignore  _shared_agent_template.py
dashboard/: .deploy-trigger  config.js  index.html  staticwebapp.config.json
infra/: deploy.sh  main.bicep  main.json  main.parameters.json
schemas/: bid_assist.schema.json  change_order.schema.json  daily_report.schema.json  onboarding_agent.schema.json  rfi_router.schema.json  safety_monitor.schema.json
sharepoint-templates/: escalation_matrix.pnp.xml  permission_matrix.pnp.xml
validator/: debug.py  function_app.py  pyproject.toml
validator/shared/: retry.py  teams_channel_registry.json  uri_scope_mapping.json
validator/shared/mocks/: escalation_matrix.json  permission_matrix.json
validator/src/: graph_client.py  orchestrator.py
validator/src/validators/: escalation_validator.py  naming_validator.py  schema_validator.py  scope_validator.py
validator/tests/: test_imports.py  test_orchestrator_fixtures.py  test_validators.py
(+45 files in other folders)
