[project]
name = "validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "azure-functions>=1.21.0,<2",
    "azure-storage-blob>=12.20",
    "jsonschema>=4.26.0",
    "pytest>=9.0.3",
    "simpleeval>=1.0.7",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
