[project]
name = "bid-assist"
version = "0.1.0"
description = "Bid Assist Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-functions",
    "azure-ai-projects>=2.0.0",
    "azure-identity",
    "openai",
    "pydantic",
    "requests",
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = ["."]
